[package]
name = "procmem-linux"
version = "0.2.0"
edition = "2024"
authors = ["avitran0"]
license = "GPL-3.0"
description = "read and write process memory on linux"
homepage = "https://github.com/avitran0/procmem-linux"
repository = "https://github.com/avitran0/procmem-linux"
readme = "readme.md"
keywords = ["memory", "debugging", "linux"]
categories = ["os::linux-apis", "memory-management", "security"]

[dependencies]
bytemuck = "1"
libc = "0.2"
thiserror = "2"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "bench"
harness = false
